# MoBrain

MoBrain/: CMakeLists.txt  LICENSE  README.md
MoBrain/include/: CMakeLists.txt
MoBrain/include/GLFW/: glfw3.h  glfw3native.h
MoBrain/include/glm/: ext.hpp
MoBrain/include/glm/detail/: _swizzle.hpp  compute_vector_decl.hpp  qualifier.hpp  setup.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
MoBrain/include/glm/ext/: matrix_clip_space.hpp  quaternion_geometric.hpp  scalar_common.hpp
MoBrain/include/glm/gtx/: compatibility.hpp  hash.hpp  intersect.hpp  intersect.hpp.bak  matrix_transform_2d.hpp  norm.hpp  vec_swizzle.hpp
MoBrain/include/imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
MoBrain/include/imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_android.cpp  imgui_impl_dx10.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_glut.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp
MoBrain/include/vulkan/: vulkan.hpp  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_format_traits.hpp  vulkan_funcs.hpp  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_hpp_macros.hpp  vulkan_raii.hpp  vulkan_shared.hpp  vulkan_static_assertions.hpp  vulkan_to_string.hpp  vulkan_video.hpp
MoBrain/lib/: MoBrain.exp
MoBrain/src/: CMakeLists.txt
MoBrain/src/creator/: CMakeLists.txt  main.cpp
MoBrain/src/mobrain/: CMakeLists.txt
MoBrain/src/mobrain/camera/: camera.cpp  camera.hpp
MoBrain/src/mobrain/core/: context.cpp  context.hpp
MoBrain/src/mobrain/engine/: buffers.cpp  buffers.hpp  commandpool.cpp  commandpool.hpp  descriptor.cpp  descriptor.hpp  devices.cpp  devices.hpp  drawer.cpp  drawer.hpp  graphicspipeline.cpp  graphicspipeline.hpp  image.cpp  image.hpp  imageview.cpp  imageview.hpp  renderpass.cpp  renderpass.hpp  swapchain.cpp  swapchain.hpp  vulkaninit.cpp  vulkaninit.hpp
MoBrain/src/mobrain/gui/: gui.cpp  gui.hpp  neuronGui.cpp  neuronGui.hpp  synapseGui.cpp  synapseGui.hpp  usefulGui.cpp  usefulGui.hpp
MoBrain/src/mobrain/networks/: basic.cu  basic.cuh  input.cu  input.cuh  networkManager.cpp  networkManager.hpp  neurons.cu  neurons.cuh  output.cpp  output.hpp  simulation.cu  simulation.cuh  synapses.cu  synapses.cuh  thinking.md
MoBrain/src/mobrain/structs/: structs.cpp  structs.hpp
MoBrain/src/mobrain/structs/engine/: graphics.hpp  memory.hpp
MoBrain/src/mobrain/structs/gui/: gui_struct.hpp  gui_stuct.cpp
MoBrain/src/mobrain/structs/scene/: role.hpp  scene.cpp  scene.hpp
MoBrain/src/mobrain/utils/: CMakeLists.txt  ID.hpp  connection.cpp  connection.hpp  readfile.cpp  readfile.hpp  role.cpp  structs.cpp  structs.hpp  usefulMap.hpp  writefile.cpp  writefile.hpp
